[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/components/blocks/door.gd" type="Script" id=1]
[ext_resource path="res://textures/rooms/dependences/door/opening_right.png" type="Texture" id=2]
[ext_resource path="res://textures/rooms/dependences/door/opening_left.png" type="Texture" id=3]
[ext_resource path="res://textures/rooms/dependences/door/closed_right.png" type="Texture" id=4]
[ext_resource path="res://textures/rooms/dependences/door/closed_left.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 32 )

[sub_resource type="Animation" id=3]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ClosedLeft/Sprite/ShuttersOpened:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ClosedRight/Sprite/ShuttersOpened:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("ClosedLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -32, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ClosedRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 32, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ClosedLeft/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ClosedRight/Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[node name="Door" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ShuttersClosed" type="Node2D" parent="."]
position = Vector2( -32, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="ShuttersClosed"]
color = Color( 0.14902, 0.196078, 0.219608, 1 )
polygon = PoolVector2Array( 28, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D2" type="Polygon2D" parent="ShuttersClosed"]
position = Vector2( 0, 8 )
color = Color( 0.14902, 0.196078, 0.219608, 1 )
polygon = PoolVector2Array( 28, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D3" type="Polygon2D" parent="ShuttersClosed"]
position = Vector2( 0, 16 )
color = Color( 0.14902, 0.196078, 0.219608, 1 )
polygon = PoolVector2Array( 28, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D4" type="Polygon2D" parent="ShuttersClosed"]
position = Vector2( 0, 24 )
color = Color( 0.14902, 0.196078, 0.219608, 1 )
polygon = PoolVector2Array( 28, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D5" type="Polygon2D" parent="ShuttersClosed"]
position = Vector2( 0, 36 )
color = Color( 0.14902, 0.196078, 0.219608, 1 )
polygon = PoolVector2Array( 28, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D6" type="Polygon2D" parent="ShuttersClosed"]
position = Vector2( 0, 44 )
color = Color( 0.14902, 0.196078, 0.219608, 1 )
polygon = PoolVector2Array( 28, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D7" type="Polygon2D" parent="ShuttersClosed"]
position = Vector2( 0, 52 )
color = Color( 0.14902, 0.196078, 0.219608, 1 )
polygon = PoolVector2Array( 28, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D8" type="Polygon2D" parent="ShuttersClosed"]
position = Vector2( 0, 60 )
color = Color( 0.14902, 0.196078, 0.219608, 1 )
polygon = PoolVector2Array( 28, -64, 36, -64, 36, -62, 28, -62 )

[node name="ClosedLeft" type="StaticBody2D" parent="."]
collision_mask = 2147483662
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ClosedLeft"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="ShuttersOpened" type="Node2D" parent="ClosedLeft/Sprite"]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="ClosedLeft/Sprite/ShuttersOpened"]
position = Vector2( -16, 16 )
scale = Vector2( 0.5, 0.5 )
color = Color( 0.811765, 0.847059, 0.862745, 1 )
polygon = PoolVector2Array( 28, -64, 32.2, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D2" type="Polygon2D" parent="ClosedLeft/Sprite/ShuttersOpened"]
position = Vector2( -16, 20 )
scale = Vector2( 0.5, 0.5 )
color = Color( 0.811765, 0.847059, 0.862745, 1 )
polygon = PoolVector2Array( 28, -64, 32.2, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D3" type="Polygon2D" parent="ClosedLeft/Sprite/ShuttersOpened"]
position = Vector2( -16, 24 )
scale = Vector2( 0.5, 0.5 )
color = Color( 0.811765, 0.847059, 0.862745, 1 )
polygon = PoolVector2Array( 28, -64, 32.2, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D4" type="Polygon2D" parent="ClosedLeft/Sprite/ShuttersOpened"]
position = Vector2( -16, 28 )
scale = Vector2( 0.5, 0.5 )
color = Color( 0.811765, 0.847059, 0.862745, 1 )
polygon = PoolVector2Array( 28, -64, 32.2, -64, 36, -64, 36, -62, 28, -62 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClosedLeft"]
visible = false
light_mask = 0
position = Vector2( -16, 0 )
shape = SubResource( 1 )

[node name="ClosedRight" type="StaticBody2D" parent="."]
collision_mask = 14
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ClosedRight"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="ShuttersOpened" type="Node2D" parent="ClosedRight/Sprite"]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D5" type="Polygon2D" parent="ClosedRight/Sprite/ShuttersOpened"]
position = Vector2( -16, 34 )
scale = Vector2( 0.5, 0.5 )
color = Color( 0.811765, 0.847059, 0.862745, 1 )
polygon = PoolVector2Array( 28, -64, 32.2, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D6" type="Polygon2D" parent="ClosedRight/Sprite/ShuttersOpened"]
position = Vector2( -16, 38 )
scale = Vector2( 0.5, 0.5 )
color = Color( 0.811765, 0.847059, 0.862745, 1 )
polygon = PoolVector2Array( 28, -64, 32.2, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D7" type="Polygon2D" parent="ClosedRight/Sprite/ShuttersOpened"]
position = Vector2( -16, 42 )
scale = Vector2( 0.5, 0.5 )
color = Color( 0.811765, 0.847059, 0.862745, 1 )
polygon = PoolVector2Array( 28, -64, 32.2, -64, 36, -64, 36, -62, 28, -62 )

[node name="Polygon2D8" type="Polygon2D" parent="ClosedRight/Sprite/ShuttersOpened"]
position = Vector2( -16, 46 )
scale = Vector2( 0.5, 0.5 )
color = Color( 0.811765, 0.847059, 0.862745, 1 )
polygon = PoolVector2Array( 28, -64, 32.2, -64, 36, -64, 36, -62, 28, -62 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClosedRight"]
visible = false
position = Vector2( 16, 0 )
shape = SubResource( 2 )

[node name="ShuttersAnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 3 )

[node name="DoorAnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 4 )
